working on getting historical data into csv files which then need to be parsed and then loaded into a database through a python script.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ***********************************************************
 CMSC 424 Database Website SPRING 2014
 ***********************************************************
-Authors: Dylan Zingler, Devtulya Kavathekar
+Author: Dylan Zingler
 
