fixed clear button, now you dont have to load a new database everytime

--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Author: Dylan Zingler
 Credits:
 http://stackoverflow.com/questions/5871730/need-a-minimal-django-file-upload-example USED FOR: file uploading
 
+Always using closing value for a buy
